moved confusing event stuff to OrchestratorService