@@ -2,14 +2,13 @@ package dev.kuku.youtagserver.user_video_tag.application;
 
 import dev.kuku.youtagserver.user_video_tag.api.UserVideoTagDTO;
 import dev.kuku.youtagserver.user_video_tag.api.UserVideoTagService;
-import dev.kuku.youtagserver.user_video_tag.api.events.*;
 import dev.kuku.youtagserver.user_video_tag.domain.UserVideoTag;
 import dev.kuku.youtagserver.user_video_tag.infrastructure.UserVideoTagRepo;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -24,7 +23,6 @@ import java.util.stream.Collectors;
 @Service
 public class UserVideoTagServiceImpl implements UserVideoTagService {
     final UserVideoTagRepo repo;
-    final ApplicationEventPublisher eventPublisher;
 
     @Override
     public UserVideoTagDTO toDto(UserVideoTag e) {
@@ -48,28 +46,17 @@ public class UserVideoTagServiceImpl implements UserVideoTagService {
     }
 
     @Override
-    public void deleteSpecificTagsFromSavedVideosOfUser(String userId, List<String> videoIds, List<String> tags) {
+    public void deleteSpecificTagsFromSavedVideosOfUser(String userId, Set<String> videoIds, Set<String> tags) {
         log.debug("Deleting tags {} of user {}", tags, userId);
         repo.deleteAllByUserIdAndVideoIdInAndTagIn(userId, videoIds, tags);
-        //Event needs to remove the tags from user if they are not used in any saved videos of user
-        eventPublisher.publishEvent(new DeleteTagsFromSpecificSavedVideos(userId, videoIds, tags));
     }
 
-    @Override
-    public void deleteSpecificTagsFromAllSavedVideosOfUser(String userId, List<String> tags) {
-        log.debug("Deleting tags {} of user {} from all videos.", tags, userId);
-        repo.deleteAllByUserIdAndTagIn(userId, tags);
-        //Event needs to remove tags from user as they are not used in any saved videos anymore.
-        eventPublisher.publishEvent(new DeleteSpecificTagsFromAllSavedVideos(userId, tags));
-    }
 
     @Override
-    public List<String> deleteAllTagsFromSpecificSavedVideosOfUser(String userId, List<String> videoIds) {
+    public Set<String> deleteAllTagsFromSpecificSavedVideosOfUser(String userId, Set<String> videoIds) {
         log.debug("Deleting all tags from saved videos {} of user {}", videoIds, userId);
         var deleted = repo.deleteAllByUserIdAndVideoIdIn(userId, videoIds);
-        //Event needs to remove tags from user if they are not used in any other saved video
-        eventPublisher.publishEvent(new DeleteAllTagsFromSpecificSavedVideosOfUser(userId, videoIds));
-        return deleted.stream().map(UserVideoTag::getTag).collect(Collectors.toList());
+        return deleted.stream().map(UserVideoTag::getTag).collect(Collectors.toSet());
     }
 
     @Override
@@ -95,17 +82,25 @@ public class UserVideoTagServiceImpl implements UserVideoTagService {
     }
 
     @Override
-    public void deleteAllTagsFromSpecificSavedVideosForAllUser(List<String> videoIds) {
+    public Set<String> deleteAllTagsFromSpecificSavedVideosForAllUser(Set<String> videoIds) {
         log.debug("Deleting all tags from videos {} for all users", videoIds);
-        Set<String> affectedUsers = repo.deleteAllByVideoIdIn(videoIds).stream().map(UserVideoTag::getUserId).collect(Collectors.toSet());
-        eventPublisher.publishEvent(new DeleteAllTagsFromSpecificSavedVideosForAllUsers(affectedUsers.stream().toList(), videoIds));
+        List<UserVideoTag> deletedEntries = repo.deleteAllByVideoIdIn(videoIds.stream().toList());
+        return deletedEntries.stream().map(UserVideoTag::getTag).collect(Collectors.toSet());
     }
 
     @Override
-    public List<String> deleteAllTagsFromSpecificSavedVideosOfUsers(List<String> userIds, List<String> videoIds) {
-        log.debug("Deleting all tags from videos {} for users {}", videoIds, userIds);
-        List<UserVideoTag> deleted = repo.deleteAllByUserIdInAndVideoIdIn(userIds, videoIds);
-        eventPublisher.publishEvent(new DeleteAllTagsFromSpecifiedSavedVideosOfUsers(userIds, videoIds));
-        return deleted.stream().map(UserVideoTag::getTag).collect(Collectors.toList());
+    public Set<String> getUnusedTagsOfUserFromList(String userId, Set<String> tagsToCheck) {
+        log.debug("Getting tags from {} that are being used by user {}", tagsToCheck, userId);
+        Set<String> entries = repo.findAllByUserIdAndTagIn(userId, tagsToCheck.stream().toList(), Pageable.unpaged())
+                .stream().map(UserVideoTag::getTag).collect(Collectors.toSet());
+        //Return back tags from tagsToCheck that are not present in entries
+        return tagsToCheck.stream().filter(tag -> !entries.contains(tag)).collect(Collectors.toSet());
+    }
+
+    @Override
+    public Set<String> getUnusedTagsForAllUserFromList(Set<String> tags) {
+        log.debug("Getting unused tags from {} that are not used by any user", tags);
+        List<String> usedTags = repo.findAllByTagIn(tags.stream().toList()).stream().map(UserVideoTag::getTag).toList();
+        return tags.stream().filter(tag -> !usedTags.contains(tag)).collect(Collectors.toSet());
     }
 }
